# VNIX

./: .gitignore  Cargo.toml  Dockerfile  PROGRESS.md  README.md  build.sh  docker.sh
.cargo/: config.toml
content/: vnix.store
doc/: message-cookbook.md  vnix-prealpha-0.1.md
src/: driver.rs  lib.rs  main.rs
src/driver/: amd64.rs  linux.rs  mod.rs  stub.rs  uefi.rs
src/vnix/: kern.rs  mod.rs  msg.rs  serv.rs  unit.rs  user.rs  utils.rs
src/vnix/core/: driver.rs  kern.rs  mod.rs  msg.rs  serv.rs  task.rs  unit.rs  user.rs
src/vnix/serv/: etc.rs  gfx.rs  io.rs  math.rs  mod.rs  sys.rs
src/vnix/serv/dat/: gen.rs  proc.rs
src/vnix/serv/etc/: chrono.rs  fsm.rs
src/vnix/serv/gfx/: gfx2d.rs
src/vnix/serv/io/: store.rs
src/vnix/serv/io/term/: base.rs  media.rs  mod.rs  text.rs
src/vnix/serv/math/: calc.rs
src/vnix/serv/sys/: hw.rs  task.rs  usr.rs
src/vnix/serv/test/: dump.rs  echo.rs  mod.rs  void.rs
src/vnix/serv/time/: chrono.rs
vnix-musl/: Cargo.toml
vnix-musl/src/: main.rs
vnix-musl/src/driver/: linux.rs
