[package]
name = "vnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.18"
uefi-services = "0.15"
# heapless = "0.7.16"
sha2 = {version = "0.10.6", default-features = false, features = ["force-soft"]}
p256 = {version = "0.11.1", default-features = false, features=["ecdsa"]}
rand = {version = "0.8.5", default-features = false}
sha3 = {version = "0.10.6", default-features = false}
base64ct = "1.5.3"
